- Improve CreatureHarvest by adding links to wiki pages describing the creature types displayed

_Submitted to App Stores 2022-07-07_

For more details on this update please visit the "What is New" page in the Apps or on the website
