@@ -39,4 +39,11 @@ class NmsExternalUrls {
   static const String steamDatabase = 'https://steamdb.info/app/275850/depots/';
   static const String communityMissionProgress =
       'https://nmscd.github.io/CommunityMission-Progress-Viewer/';
+  static const String communitySearchHomepage = 'https://community.nmscd.com';
+  static const String communitySearchList =
+      'https://raw.githubusercontent.com/NMSCD/Community-Search/main/src/assets/data/communityList.json';
+  static const String communitySearchChipColours =
+      'https://raw.githubusercontent.com/NMSCD/Community-Search/main/src/assets/data/chipColours.json';
+  static const String communitySearchAddLinkForm =
+      'https://airtable.com/shrhZOQrrp9a9zoJk';
 }
