@@ -1,31 +1,53 @@
 // To parse this JSON data, do
 //
-//     final stripeDonationViewModel = stripeDonationViewModelFromJson(jsonString);
-//https://app.quicktype.io/
+//     final communityLinkViewModel = communityLinkViewModelFromMap(jsonString);
 
 import 'dart:convert';
 
-class CommunityLinkViewModel {
-  String name;
-  String subtitle;
-  String externalUrl;
-  String iconUrl;
+import 'package:assistantapps_flutter_common/assistantapps_flutter_common.dart';
 
+class CommunityLinkViewModel {
   CommunityLinkViewModel({
+    this.id,
     this.name,
-    this.subtitle,
-    this.externalUrl,
-    this.iconUrl,
+    this.icon,
+    this.banners,
+    this.desc,
+    this.tags,
+    this.links,
   });
+
+  String id;
+  String name;
+  String icon;
+  List<String> banners;
+  String desc;
+  List<String> tags;
+  List<String> links;
 
   factory CommunityLinkViewModel.fromRawJson(String str) =>
       CommunityLinkViewModel.fromJson(json.decode(str));
 
   factory CommunityLinkViewModel.fromJson(Map<String, dynamic> json) =>
       CommunityLinkViewModel(
-        name: json['name'],
-        subtitle: json['subtitle'],
-        externalUrl: json['externalUrl'],
-        iconUrl: json['iconUrl'],
+        id: readStringSafe(json, 'id'),
+        name: readStringSafe(json, 'name'),
+        icon: readStringSafe(json, 'icon'),
+        banners: readListSafe<String>(
+          json,
+          'banners',
+          (dynamic json) => json.toString(),
+        ),
+        desc: readStringSafe(json, 'desc'),
+        tags: readListSafe<String>(
+          json,
+          'tags',
+          (dynamic json) => json.toString(),
+        ),
+        links: readListSafe<String>(
+          json,
+          'links',
+          (dynamic json) => json.toString(),
+        ),
       );
 }
