@@ -55,6 +55,7 @@ dependencies:
   ff_stars: 1.0.0
   file_picker: 4.6.0
   fl_chart: 0.51.0
+  flutter_image_slideshow: ^0.1.2
   flutter_local_notifications: 9.5.3+1
   flutter_simple_treeview: 3.0.1
   flutter_speed_dial: 6.0.0
