@@ -1,4 +1,5 @@
 - Improve CreatureHarvest by adding links to wiki pages describing the creature types displayed
+- Integrate with NMSCD Community Search
 
 _Submitted to App Stores 2022-07-07_
 
